// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - string test basic 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    string
  </span>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  />
</details>
`;

exports[`JSONSchemaViewer - string test format 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    object
  </span>
  <ul>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop1
          </strong>
           
          <span>
            date-time
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (date-time)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop2
          </strong>
           
          <span>
            time
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (time)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop3
          </strong>
           
          <span>
            date
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (date)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop4
          </strong>
           
          <span>
            duration
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (duration)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop5
          </strong>
           
          <span>
            email
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (email)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop6
          </strong>
           
          <span>
            idn-email
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (idn-email)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop7
          </strong>
           
          <span>
            hostname
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (hostname)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop8
          </strong>
           
          <span>
            idn-hostname
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (idn-hostname)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop9
          </strong>
           
          <span>
            ipv4
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (ipv4)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop10
          </strong>
           
          <span>
            ipv6
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (ipv6)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop11
          </strong>
           
          <span>
            uuid
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (uuid)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop12
          </strong>
           
          <span>
            uri
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (uri)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop12B
          </strong>
           
          <span>
            uri-reference
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (uri-reference)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop13
          </strong>
           
          <span>
            iri
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (iri)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop13B
          </strong>
           
          <span>
            iri-reference
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (iri-reference)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop14
          </strong>
           
          <span>
            uri-template
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (uri-template)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop15
          </strong>
           
          <span>
            json-pointer
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (json-pointer)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop16
          </strong>
           
          <span>
            relative-json-pointer
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (relative-json-pointer)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
    <li>
      <details
        open={false}
      >
        <summary>
          <strong>
            prop17
          </strong>
           
          <span>
            regex
          </span>
        </summary>
        <strong>
          type
        </strong>
         : 
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
           
          (regex)
        </span>
        <div
          style={
            {
              "marginTop": "var(--ifm-table-cell-padding)",
            }
          }
        />
      </details>
    </li>
  </ul>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  />
</details>
`;

exports[`JSONSchemaViewer - string test maxLength 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    string
  </span>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    <div>
      <strong>
        Length :
      </strong>
       
      <code>
        &lt;= 3 character(s)
      </code>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - string test minLength & maxLength 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    string
  </span>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    <div>
      <strong>
        Length :
      </strong>
       
      <code>
        &gt;= 2 character(s)
      </code>
       
      AND
       
      <code>
        &lt;= 3 character(s)
      </code>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - string test minLength 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    string
  </span>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    <div>
      <strong>
        Length :
      </strong>
       
      <code>
        &gt;= 2 character(s)
      </code>
    </div>
  </div>
</details>
`;

exports[`JSONSchemaViewer - string test pattern 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    string
  </span>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    <div>
      <strong>
        Pattern :
      </strong>
       
      <code>
        ^(\\([0-9]{3}\\))?[0-9]{3}-[0-9]{4}$
      </code>
    </div>
  </div>
</details>
`;
